<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_300"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/please_wait"
            android:textSize="@dimen/size_sp_20" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_dp_100"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/failed_message"
            android:layout_width="@dimen/size_dp_300"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_dp_10"
            android:text=""
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/size_sp_20" />


        <EditText
            android:id="@+id/email_field"
            android:layout_width="@dimen/size_dp_300"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_dp_10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="@dimen/size_dp_300"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_dp_10"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="@dimen/size_dp_300"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_dp_10"
            android:background="@android:color/darker_gray"
            android:text="@string/log_in"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/size_sp_20" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
